--- a/INDEX.CSS
+++ b/INDEX.CSS
@@ -1,7 +1,7 @@
 .contenedor {
   padding: 50px;
-  margin: 10px;
-
+  margin: 10px auto;
+  max-width: 600px;
   border: solid 5px;
   display: flex;
   gap: 10px;
